Bug 1063494 - Properly handle async-scrolled layers that are also fixed/sticky-position. r=botond, r=BenWa, a=bajaj